update patch route, swagger and model for active dashboard
