# routes/api/dashboards.js
@@ -1,5 +1,5 @@
 const express = require("express");
-const { getAll, getById, addNew, updateById, removeById } = require("../../controllers/dashboard");
+const { getAll, getById, addNew, updateById, removeById, updateCurrentDashboard } = require("../../controllers/dashboard");
 const authenticate = require("../../middlewares/authenticate");
 
 const router = express.Router();
@@ -11,6 +11,12 @@ router.get("/:dashboardId", authenticate, getById);
 router.post("/", authenticate, addNew);
 
 router.put("/:dashboardId", authenticate, updateById);
+
+//
+
+router.patch("/:dashboardId", authenticate, updateCurrentDashboard)
+
+//
 
 router.delete("/:dashboardId", authenticate, removeById);
 
